--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -1,2 +1,4 @@
 $BACKGROUND_COLOR: rgb(243, 243, 243);
 $PRIMARY_COLOR: rgb(48, 47, 52);
+$SECONDARY_COLOR: rgb(106, 105, 107);
+$THIRD_TEXT_COLOR: rgb(237, 237, 237);
