--- a/src/styles/modules/_listElement.scss
+++ b/src/styles/modules/_listElement.scss
@@ -2,11 +2,13 @@
     display: grid;
     align-items: center;
     grid-template-rows: 1fr;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 0.5fr 1fr 1fr 1fr;
     width: 100%;
     height: 60px;
     background-color: rgb(230, 228, 228);
+    border-radius: 5px;
     margin: 5px 0;
+    padding: 0 10px;
     list-style: none;
     box-shadow: 0 0 5px rgba(126, 126, 126, 0.5);
 
@@ -18,6 +20,7 @@
         justify-self: start;
         grid-column: 1;
         grid-row: 1;
-        width: 30%;
+        width: 50%;
+        border-radius: 2px;
     }
 }
