--- a/src/styles/modules/_workspace.scss
+++ b/src/styles/modules/_workspace.scss
@@ -1,7 +1,7 @@
 .workspace {
     display: flex;
     justify-content: center;
-    width: 82%;
+    width: 100%;
     height: 100%;
     background-color: rgb(232, 232, 232);
 
@@ -26,5 +26,14 @@
     ul {
         width: 100%;
         padding: 20px 15px;
+    }
+
+    .list-markup {
+        display: grid;
+        grid-template-columns: 0.5fr 1fr 1fr 1fr;
+        margin-left: 5px;
+        margin-bottom: 10px;
+        color: $SECONDARY_COLOR;
+        font-size: 15px;
     }
 }
