--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -1,4 +1,7 @@
 $BACKGROUND_COLOR: rgb(243, 243, 243);
 $PRIMARY_COLOR: rgb(48, 47, 52);
 $SECONDARY_COLOR: rgb(106, 105, 107);
+$SECONDARY_COLOR_HOVER: rgb(54, 54, 54);
 $THIRD_TEXT_COLOR: rgb(237, 237, 237);
+
+$workspace_column_marking: 0.5fr 1fr 1fr 1fr 0.15fr;
