--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,17 @@ body {
     background-color: $BACKGROUND_COLOR;
     margin: 0;
     padding: 0;
+
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE и Edge */
+    &__list::-webkit-scrollbar {
+        display: none; /* Скрываем полосу прокрутки в WebKit (Chrome, Safari) */
+    }
+}
+
+a {
+    text-decoration: none;
+    color: $SECONDARY_COLOR;
 }
 
 .container {
