--- a/src/styles/modules/_listElement.scss
+++ b/src/styles/modules/_listElement.scss
@@ -2,7 +2,7 @@
     display: grid;
     align-items: center;
     grid-template-rows: 1fr;
-    grid-template-columns: 0.5fr 1fr 1fr 1fr;
+    grid-template-columns: $workspace_column_marking;
     width: 100%;
     height: 60px;
     background-color: rgb(230, 228, 228);
@@ -10,7 +10,7 @@
     margin: 5px 0;
     padding: 0 10px;
     list-style: none;
-    box-shadow: 0 0 5px rgba(126, 126, 126, 0.5);
+    box-shadow: 0 0 2px rgba(126, 126, 126, 0.5);
 
     p {
         grid-row: 1;
