--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,11 +8,11 @@ body {
     margin: 0;
     padding: 0;
 
-    scrollbar-width: none; /* Firefox */
-    -ms-overflow-style: none; /* IE и Edge */
-    &__list::-webkit-scrollbar {
-        display: none; /* Скрываем полосу прокрутки в WebKit (Chrome, Safari) */
-    }
+    // scrollbar-width: none; /* Firefox */
+    // -ms-overflow-style: none; /* IE и Edge */
+    // &__list::-webkit-scrollbar {
+    //     display: none; /* Скрываем полосу прокрутки в WebKit (Chrome, Safari) */
+    // }
 }
 
 a {
