--- a/src/styles/modules/_listElement.scss
+++ b/src/styles/modules/_listElement.scss
@@ -1,26 +1,67 @@
-.listElement {
-    display: grid;
-    align-items: center;
-    grid-template-rows: 1fr;
-    grid-template-columns: $workspace_column_marking;
-    width: 100%;
-    height: 60px;
-    background-color: rgb(230, 228, 228);
-    border-radius: 5px;
-    margin: 5px 0;
-    padding: 0 10px;
-    list-style: none;
-    box-shadow: 0 0 2px rgba(126, 126, 126, 0.5);
+$li-height: 60px;
 
-    p {
-        grid-row: 1;
-    }
+.listElement {
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  grid-template-rows: 1fr;
+  grid-template-columns: $workspace_column_marking;
+  width: 100%;
+  height: $li-height;
+  background-color: rgb(230, 228, 228);
+  border-radius: 5px;
+//   margin: 5px 0;
+  list-style: none;
+  box-shadow: 0 0 2px rgba(126, 126, 126, 0.5);
+
+  p {
+    grid-row: 1;
+  }
+
+  .avatar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    grid-row: 1;
+    width: 52px;
+    height: $li-height - 10px;
+
+    
 
     img {
-        justify-self: start;
-        grid-column: 1;
-        grid-row: 1;
-        width: 50%;
-        border-radius: 2px;
+      width: 100%;
+      height: 100%;
+      border-radius: 60px;
     }
+  }
+
+  .checkbox {
+    margin-left: 8%;
+    grid-column: 1;
+
+    div {
+        grid-row: 1;
+    }
+  }
+
+  .avatar {
+    grid-column: 2;
+  }
+
+  .name {
+    grid-column: 3;
+  }
+
+  .created_ad {
+    grid-column: 4;
+  }
+
+  .email {
+    grid-column: 5;
+  }
+
+  .country {
+    grid-column: 6;
+  }
 }
