--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -4,4 +4,4 @@ $SECONDARY_COLOR: rgb(106, 105, 107);
 $SECONDARY_COLOR_HOVER: rgb(54, 54, 54);
 $THIRD_TEXT_COLOR: rgb(237, 237, 237);
 
-$workspace_column_marking: 0.25fr 0.4fr 0.6fr 1fr 1fr 0.7fr 0.22fr;
+$workspace_column_marking: 0.25fr 0.4fr 0.8fr 0.6fr 1fr 0.9fr 0.7fr 0.22fr;
