--- a/src/styles/modules/_listElement.scss
+++ b/src/styles/modules/_listElement.scss
@@ -1,4 +1,5 @@
 $li-height: 60px;
+$estimition-height: 40px;
 
 .listElement {
   display: grid;
@@ -76,7 +77,7 @@ $li-height: 60px;
   .id {
     grid-column: 4;
   }
-  
+
   .created_ad {
     grid-column: 5;
   }
@@ -92,4 +93,125 @@ $li-height: 60px;
 
 .active {
   color: rgb(0, 174, 190) !important;
+}
+
+/*----------------------------------------*/
+/*----------------------------------------*/
+/*----------------------------------------*/
+/*----------------------------------------*/
+/*----------------------------------------*/
+
+.estimate-box {
+  padding: 15px 20px;
+  border-radius: 15px;
+  background-color: rgb(231, 231, 231);
+  box-shadow: 0 0 2px rgba(126, 126, 126, 0.5);
+  margin-bottom: 30px;
+}
+
+.top-info {
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  gap: 30px;
+  padding: 0 10px;
+  margin-bottom: 15px;
+}
+.bottom-info{
+  width: 100%;
+  display: flex;
+  justify-content: end;
+  padding: 0 15px;
+  margin-top: 20px;
+}
+
+
+.EstimateElement {
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  grid-template-rows: 1fr;
+  grid-template-columns: $workspace_column_marking;
+  width: 100%;
+  min-height: $estimition-height;
+  background-color: rgb(231, 231, 231);
+  border-radius: 5px;
+  margin: 5px 0;
+  list-style: none;
+  box-shadow: 0 0 2px rgba(126, 126, 126, 0.5);
+
+  p {
+    grid-row: 1;
+  }
+
+  //for client page
+  .avatar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    grid-row: 1;
+    width: 52px;
+    height: $li-height - 20px;
+
+    img {
+      width: 100%;
+      height: 100%;
+      border-radius: 60px;
+    }
+  }
+
+  //for project page
+  .preview {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    grid-row: 1;
+    width: 75px;
+    height: $li-height - 10px;
+
+    img {
+      width: 100%;
+      height: 100%;
+      border-radius: 2px;
+    }
+  }
+
+  .checkbox {
+    margin-left: 8%;
+    grid-column: 1;
+
+    div {
+      grid-row: 1;
+    }
+  }
+
+  .avatar {
+    grid-column: 2;
+  }
+
+  .preview {
+    grid-column: 2;
+  }
+
+  .name {
+    grid-column: 3;
+  }
+
+  .id {
+    grid-column: 4;
+  }
+
+  .created_ad {
+    grid-column: 5;
+  }
+
+  .email {
+    grid-column: 6;
+  }
+
+  .country {
+    grid-column: 7;
+  }
 }
