--- a/src/styles/modules/_workspace.scss
+++ b/src/styles/modules/_workspace.scss
@@ -1,55 +1,86 @@
 .workspace {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(232, 232, 232);
+
+  &__container {
     display: flex;
-    justify-content: center;
-    width: 100%;
+    flex-direction: column;
+    width: 90%;
     height: 100%;
-    background-color: rgb(232, 232, 232);
+  }
 
-    &__container {
-        display: flex;
-        flex-direction: column;
-        width: 90%;
-        height: 100%;
+  &__top-block {
+    margin-top: 60px;
+  }
+
+  &__list {
+    width: 100%;
+    height: 100vh;
+    box-shadow: 0 0 10px rgba(126, 126, 126, 0.5);
+    overflow: auto;
+    overflow-x: hidden;
+    padding: 15px 20px;
+    border-radius: 10px 10px 0 0;
+
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+
+    &__list::-webkit-scrollbar {
+      display: none;
     }
 
-    &__top-block {
-        margin-top: 60px;
+    li:hover {
+      background-color: rgb(223, 221, 221);
     }
+  }
 
-    &__list {
-        width: 100%;
-        height: 100vh;
-        box-shadow: 0 0 10px rgba(126, 126, 126, 0.5);
-        overflow: auto;
-        overflow-x: hidden;
-        padding: 15px 20px;
-        border-radius: 10px 10px 0 0;
+  .list-markup {
+    display: grid;
+    grid-template-columns: $workspace_column_marking;
+    margin-bottom: 10px;
+    margin-top: 30px;
+    color: $SECONDARY_COLOR;
+    opacity: 80%;
+    font-size: 14px;
+    padding: 0 15px;
+    margin-left: 10px;
 
-
-        scrollbar-width: none; /* Firefox */
-        -ms-overflow-style: none; /* IE и Edge */
-
-        &__list::-webkit-scrollbar {
-            display: none; /* Chrome */
-        }
-
-        li:hover {
-            background-color: rgb(223, 221, 221);
-        }
+    a:hover {
+      color: $SECONDARY_COLOR_HOVER;
     }
+  }
 
-    .list-markup {
-        display: grid;
-        grid-template-columns: $workspace_column_marking;
-        margin-left: 5px;
-        margin-bottom: 10px;
-        margin-top: 10px;
-        color: $SECONDARY_COLOR;
-        font-size: 15px;
-        padding: 0 20px;
+  .list_estimateBox {
+    display: grid;
+    justify-items: center;
+    grid-template-columns: $workspace_column_estimateBox;
+    margin-bottom: 10px;
+    margin-top: 30px;
+    color: $SECONDARY_COLOR;
+    opacity: 80%;
+    font-size: 14px;
 
-        a:hover {
-            color: $SECONDARY_COLOR_HOVER;
-        }
+    a:hover {
+      color: $SECONDARY_COLOR_HOVER;
     }
+  }
+
+  .list-markup-estimate {
+    display: grid;
+    justify-items: center;
+    grid-template-columns: $workspace_column_marking_estimate;
+    margin-left: 5px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    color: $SECONDARY_COLOR;
+    font-size: 15px;
+    padding: 0 20px;
+
+    a:hover {
+      color: $SECONDARY_COLOR_HOVER;
+    }
+  }
 }
