--- a/src/styles/modules/_workspace.scss
+++ b/src/styles/modules/_workspace.scss
@@ -1,15 +1,8 @@
 .workspace {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  background-color: rgb(232, 232, 232);
+  @include initComponent;
 
   &__container {
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-    height: 100%;
+    @include initContainer;
   }
 
   &__top-block {
@@ -24,7 +17,6 @@
     overflow-x: hidden;
     padding: 15px 20px;
     border-radius: 10px 10px 0 0;
-
     scrollbar-width: none;
     -ms-overflow-style: none;
 
