--- a/src/styles/modules/_workspace.scss
+++ b/src/styles/modules/_workspace.scss
@@ -29,6 +29,109 @@
     }
   }
 
+  &__button-container {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  div#searchBox {
+    float: none;
+    text-align: center;
+    color: #777;
+  }
+
+  #searchform {
+    border-bottom: 1px solid #ccc;
+    padding: 8px 0 0;
+  }
+
+  #searchform input {
+    border: 0px;
+    background: transparent;
+    padding: 8px 10px 5px;
+    outline: none;
+  }
+
+  .mobile-form #searchform {
+    padding-top: 2.5px;
+    width: 215px;
+  }
+
+  div#searchBox #searchform {
+    border: 1px solid #464646;
+    border-radius: 5px;
+    width: 238px;
+    padding-top: 1px;
+    display: inline-block;
+  }
+
+  div#searchBox #searchform input {
+    padding: 5px;
+    display: block;
+  }
+
+  #searchBox i.fa.fa-search {
+    padding: 8px;
+    cursor: pointer;
+  }
+
+  .sb-icon-search,
+  .sb-search-submit {
+    width: 30px;
+    height: 30px;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 0;
+    margin: 0;
+    line-height: 30px;
+    text-align: center;
+  }
+
+  div#searchBox #searchform .sb-icon-search {
+    /* color: #fff; */
+    /* background: #3f91c3; */
+    z-index: 90;
+    /* font-size: 22px; */
+    font-family: "FontAwesome";
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    -webkit-font-smoothing: antialiased;
+    top: -1px;
+  }
+
+  div#searchBox #searchform .sb-icon-search:before {
+    content: "\f002";
+  }
+
+  span#noEasy {
+    display: block;
+    /* overflow: hidden; */
+    position: relative;
+    width: 30px;
+    height: 30px;
+    float: left;
+    padding-left: 3px;
+  }
+
+  span#noEasy input {
+    width: 30px;
+    padding: 0 !important;
+  }
+
+  input#sbox {
+    line-height: 31px;
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+  }
+  span#noEasy:hover {
+    color: #444;
+  }
+
   .list-markup {
     display: grid;
     grid-template-columns: $workspace_column_marking;
@@ -66,9 +169,9 @@
     grid-template-columns: $workspace_column_marking_estimate;
     margin-left: 5px;
     margin-bottom: 10px;
-    margin-top: 10px;
+    margin-top: 30px;
     color: $SECONDARY_COLOR;
-    font-size: 15px;
+    font-size: 14px;
     padding: 0 20px;
 
     a:hover {
