Add header (home page)

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 @import './modules/workspace';
 @import './modules/listElement';
 @import './modules/auth';
+@import './modules/homePage';
 
 body {
     background-color: $BACKGROUND_COLOR;
