--- a/src/styles/modules/_homePage.scss
+++ b/src/styles/modules/_homePage.scss
@@ -246,8 +246,44 @@
 }
 
 .footer {
+  display: flex;
+  justify-content: center;
   width: 100%;
   min-height: 300px;
   background-color: $PRIMARY_COLOR;
   margin-top: 100px;
+  &__column {
+    width: 33.333%;
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    h3 {
+      color: white;
+    }
+
+    .footer__logo {
+      color: white;
+      margin-top: 40px;
+    }
+    li {
+      text-align: center;
+      list-style: none;
+      color: rgb(183, 183, 183);
+    }
+  }
+  &__column-line {
+    width: 100%;
+    height: 0.5px;
+    background-color: rgb(141, 141, 141);
+  }
+  &__container-top {
+    padding: 50px 0 0 0;
+    display: flex;
+    gap: 60px;
+    width: 100%;
+    height: 100%;
+    // background-color: red;
+  }
 }
