--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -8,3 +8,4 @@ $workspace_column_marking: 0.25fr 0.4fr 0.8fr 0.6fr 1fr 0.9fr 0.7fr 0.22fr;
 $workspace_column_estimateBox:0.25fr 0.8fr 0.5fr 0.8fr 1fr 0.8fr 0.5fr 0.25fr;
 $workspace_column_marking_estimate: 1fr 1fr 1fr 0.5fr 1fr 0.9fr 0.7fr 0.22fr;
 $estimates_column_marking: 0.25fr 0.8fr 0.5fr 0.8fr 1fr 0.8fr 0.5fr 0.25fr;
+$workspace_column_marking-user: 1.4fr 0.5fr 0.5fr 0.8fr 0.5fr 0.8fr 0.5fr 0.25fr;
