--- a/src/styles/modules/_listElement.scss
+++ b/src/styles/modules/_listElement.scss
@@ -90,6 +90,92 @@ $estimition-height: 40px;
     grid-column: 7;
   }
 }
+.userListElement {
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  grid-template-rows: 1fr;
+  grid-template-columns: $workspace_column_marking-user;
+  width: 100%;
+  height: $li-height;
+  background-color: rgb(230, 228, 228);
+  border-radius: 5px;
+  margin: 5px 0;
+  list-style: none;
+  box-shadow: 0 0 2px rgba(126, 126, 126, 0.5);
+
+  p {
+    grid-row: 1;
+  }
+
+  //for client page
+  .avatar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    grid-row: 1;
+    width: 52px;
+    height: $li-height - 10px;
+
+    img {
+      width: 100%;
+      height: 100%;
+      border-radius: 60px;
+    }
+  }
+
+  //for project page
+  .preview {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    grid-row: 1;
+    width: 75px;
+    height: $li-height - 10px;
+
+    img {
+      width: 100%;
+      height: 100%;
+      border-radius: 2px;
+    }
+  }
+
+
+  .email {
+    grid-column: 1;
+    margin-left: 30px;
+  }
+
+  .preview {
+    grid-column: 2;
+  }
+
+  .firstName {
+    grid-column: 6;
+  }
+  .lastname {
+    grid-column: 7;
+  }
+  .phone {
+    grid-column: 5;
+  }
+
+  .id {
+    grid-column: 2;
+  }
+
+  .created_ad {
+    grid-column: 3;
+  }
+
+
+
+  .bio {
+    grid-column: 4;
+  }
+}
 
 .active {
   color: rgb(0, 174, 190) !important;
