Fix avatar & username in the sidebar

--- a/src/styles/modules/_listElement.scss
+++ b/src/styles/modules/_listElement.scss
@@ -124,6 +124,7 @@ $estimition-height: 40px;
       width: 100%;
       height: 100%;
       border-radius: 60px;
+      object-fit: cover;
     }
   }
 
@@ -141,6 +142,7 @@ $estimition-height: 40px;
       width: 100%;
       height: 100%;
       border-radius: 2px;
+      object-fit: cover;
     }
   }
 
@@ -261,6 +263,7 @@ $estimition-height: 40px;
       width: 100%;
       height: 100%;
       border-radius: 2px;
+      object-fit: cover;
     }
   }
 
