--- a/src/styles/modules/_auth.scss
+++ b/src/styles/modules/_auth.scss
@@ -144,7 +144,12 @@ p {
       width: 100%;
       position: absolute;
       opacity: 12%;
+      background-color: #4389b5;
     }
+  }
+
+  &__right-side--reset {
+    background-color: #9143b5;
   }
   &__left-side-container {
     display: flex;
@@ -180,6 +185,10 @@ p {
       border-radius: 50px;
       position: absolute;
     }
+  }
+
+  .login__right-side-imgbox--reset {
+    background-color: rgba(161, 116, 195, 0.485); /* пример прозрачности 50% */
   }
 
   &__line {
